[gd_scene load_steps=8 format=3 uid="uid://downt2rxxaqaf"]

[ext_resource type="Texture2D" uid="uid://n6opr2ssjnv5" path="res://imagens/ChatGPT_Image_28_de_set._de_2025_16_15_08.png" id="1_iwfq2"]
[ext_resource type="Script" uid="uid://yshas32n0ny5" path="res://scripts/main_menu.gd" id="2_rvc10"]
[ext_resource type="Texture2D" uid="uid://cp1sh8hqy8ani" path="res://imagens/CICLO_TRANSPARENTE.png" id="2_tf3dk"]
[ext_resource type="FontFile" uid="uid://dboxkasdapd73" path="res://Fontes/BoldPixels.ttf" id="3_cqjrg"]
[ext_resource type="Texture2D" uid="uid://cutt1kh3xr6q" path="res://imagens/logo-discord-1024.png" id="4_e2xy7"]
[ext_resource type="Script" uid="uid://chooa7va780wc" path="res://scripts/discord_button.gd" id="5_fimr5"]
[ext_resource type="AudioStream" uid="uid://c8ag6husw1v2" path="res://assets/musica/Metal Hellsinger — The Hellsinger (Main Theme) - Piece Of Lembas (youtube).mp3" id="7_85i58"]

[node name="Control" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 1.0
offset_right = -2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_iwfq2")
expand_mode = 2
script = ExtResource("2_rvc10")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 959.0
offset_bottom = 542.0
color = Color(0.41, 0.41, 0.41, 0.501961)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = -19.0
offset_right = 371.0
offset_bottom = 181.0
texture = ExtResource("2_tf3dk")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -125.0
offset_right = 331.0
offset_bottom = 125.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Jogar_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.768627, 0.721569, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cqjrg")
theme_override_font_sizes/font_size = 46
text = "Jogar"
language = "pt"

[node name="Opções_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.768627, 0.721569, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cqjrg")
theme_override_font_sizes/font_size = 46
text = "Opções"

[node name="Creditos_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.768627, 0.721569, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cqjrg")
theme_override_font_sizes/font_size = 46
text = "Créditos"

[node name="Sair_Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.768627, 0.721569, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_cqjrg")
theme_override_font_sizes/font_size = 46
text = "Sair
"

[node name="DiscordButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 437.0
offset_right = 963.0
offset_bottom = 572.0
texture_normal = ExtResource("4_e2xy7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_fimr5")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_85i58")
autoplay = true
attenuation = 0.784584

[connection signal="pressed" from="VBoxContainer/Jogar_Button" to="." method="_on_jogar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Opções_Button" to="." method="_on_opções_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos_button" to="." method="_on_creditos_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair_Button" to="." method="_on_Sair_Button_pressed"]
[connection signal="pressed" from="DiscordButton" to="DiscordButton" method="_on_link_button_pressed"]
